advance selectors compleated

--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,9 @@ ul > li{
 /* ul li{
     color: green;
 } */
+img[src^="/img/"] {
+    border: 10px solid black;
+}
+h2[class~=sub2]{
+    background: green;
+}
