--- a/css/style1.css
+++ b/css/style1.css
@@ -1,8 +1,10 @@
 body{
-    background: linear-gradient(to bottom, rgb(205, 231, 252), rgba(205, 231, 252, 0.2));
-    font-size: ;
+    background: linear-gradient(to bottom, rgba(205, 231, 252, 0.671), rgba(205, 231, 252, 0.2));
 /*  background-image: url(/img/img-1.jpg);
  */
+text-transform: capitalize;
+text-align: justify;
+
 }
 
 #title{
@@ -18,3 +20,9 @@ body{
  */    background:radial-gradient(circle, red 20%,blue 40%,green 60%)
 /*     background-size: cover /* contain */ /* 50px 100px; */
 }
+.link{
+    text-decoration: none;
+/*     text-decoration: underline;
+    text-decoration: line-through;
+    text-decoration: overline;
+ */}
