--- a/css/style1.css
+++ b/css/style1.css
@@ -1,11 +1,11 @@
 body{
     background: linear-gradient(to bottom, rgba(205, 231, 252, 0.671), rgba(205, 231, 252, 0.2));
-/*  background-image: url(/img/img-1.jpg);
- */
-text-transform: capitalize;
-text-align: justify;
-font-size: 1.1em;
-font-weight: 400;
+/*     background-image: url(/img/img-1.jpg);*/
+    text-transform: capitalize;
+    text-align: justify;
+    font-size: 1.1em;
+    font-weight: 400;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #title{
