--- a/css/style1.css
+++ b/css/style1.css
@@ -4,15 +4,21 @@ body{
     text-transform: capitalize;
     text-align: justify;
     font-size: 1.1em;
-    font-weight: 400;
+/*     font-weight: 400;
     font-family: Arial, Helvetica, sans-serif;
-}
+ */
+    font-family: 'Lato', sans-serif;
+   }
 
 #title{
     color: rgb(186, 133, 9);
+    font-family: 'Roboto', sans-serif;
+
 } 
 .subtitle{
     color: rgb(201, 154, 44);
+        font-family: 'Roboto', sans-serif;
+
 }
 #service-images{
     height: 400px;
