--- a/css/style1.css
+++ b/css/style1.css
@@ -5,7 +5,7 @@ body{
     text-align: justify;
     font-size: 1.1em;
 /*     font-weight: 400;
-    font-family: Arial, Helvetica, sans-serif;
+     S  font-family: Arial, Helvetica, sans-serif;
  */
     font-family: 'Lato', sans-serif;
    }
@@ -23,9 +23,8 @@ body{
 #service-images{
     height: 400px;
     width: 70vw;
-/*     background: url("/img/img-2.jpg");
- */    background:radial-gradient(circle, red 20%,blue 40%,green 60%)
-/*     background-size: cover /* contain */ /* 50px 100px; */
+    background:radial-gradient(circle, red 20%,blue 40%,green 60%);
+    border: 20px solid rgb(54, 78, 154);
 }
 .link{
     text-decoration: none;
@@ -35,4 +34,8 @@ body{
  */}
  .ilalis{
     font-style: italic;
+ }
+ #about-us{
+    height: 300px;
+    width: 60vw;
  }
