--- a/css/style1.css
+++ b/css/style1.css
@@ -37,5 +37,7 @@ body{
  }
  #about-us{
     height: 300px;
-    width: 60vw;
+    width: 60%;
+    border: 2px solid black;
+    margin: 100px 50px;
  }
