--- a/css/style1.css
+++ b/css/style1.css
@@ -3,7 +3,7 @@ body{
 /*     background-image: url(/img/img-1.jpg);*/
     text-transform: capitalize;
     text-align: justify;
-    font-size: 1.1em;
+    font-size: 1.3em;
 /*     font-weight: 400;
      S  font-family: Arial, Helvetica, sans-serif;
  */
@@ -40,4 +40,8 @@ body{
     width: 60%;
     border: 2px solid black;
     margin: 100px 50px;
+    float: right;
  }
+.table{
+display: inline-block;
+}
