--- a/css/style1.css
+++ b/css/style1.css
@@ -64,3 +64,18 @@ display: inline-block;
     line-height: 50px;
     margin: 10px;
 }
+.grid-container{
+    background-color: aliceblue;
+    margin: 10px;
+    height: 300px;
+
+    display: grid;
+}
+.grid-item{
+    color: black;
+    font-size: 25px;
+    text-align: center;
+    width: 70px;
+    line-height: 40px;
+    margin: 10px;
+}
